<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUPActivity">

    <TextView
        android:id="@+id/sn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/sn_sign_up"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_edittext_bg"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/sn_name_hint"
        android:inputType="text"
        android:paddingStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sn_login"
        app:layout_constraintVertical_bias="0.106"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_edittext_bg"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/sn_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintVertical_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        android:background="@drawable/ic_edittext_bg"
        android:drawableStart="@drawable/ic_outline_lock_24"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:padding="2dp"
        android:inputType="number"
        android:hint="@string/sn_mobileNo_hint"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_edittext_bg"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        android:drawableStart="@drawable/ic_outline_phone_android_24"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry,TextFields"
        android:autofillHints="" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="5dp"
        android:background="@drawable/ic_checkbox_style"
        android:text="@string/sn_checkbox_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sn_signup"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_login_btn"
        android:text="@string/sn_sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sn_noAcc_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sn_signup"
        app:layout_constraintVertical_bias="0.201" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/snΩ_login"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="textStart"
        android:textColor="#16D495"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/sn_signup"
        app:layout_constraintVertical_bias="0.17000002"
        tools:ignore="DuplicateIds,MissingConstraints,RtlCompat" />




</androidx.constraintlayout.widget.ConstraintLayout>